CHANGES IN FLTK 1.1.4

	- OSX window resizing didn't work (STR #64)
	- Fixed MacOS X shared library generation (STR #51)
	- Several widgets defined their own size() method but
	  didn't provide an inline method that mapped to the
	  Fl_Widget::size() method (STR #62)
	- Fl_Scroll didn't provide its own clear() method, so
	  calling clear() on a Fl_Scroll widget would also
	  destroy the scrollbars (STR #75)
	- Fl::event_text() was sometimes initialized to NULL
	  instead of an empty string (STR #70)
	- fl_draw() didn't properly handle a trailing escaped
	  "@" character (STR #84)
	- Added documentation for all forms of
	  Fl_Widget::damage() (STR #61)
	- Fl_Double_Window now has a type() value of
	  FL_DOUBLE_WINDOW, to allow double-buffered windows to
	  process redraws properly on WIN32 (STR #46)
	- Added FL_DAMAGE_USER1 and FL_DAMAGE_USER2 damage bits
	  for use by widget developers (STR #57)
	- Fl_Help_View didn't support numeric character entities
	  (STR #66)
	- Menu shortcuts didn't use the Mac key names under
	  MacOS X (STR #71)
	- CodeWarrior Mac OS X updated to work with current
	  CW8.3 (STR #34)
	- Apple-C/X/V/Z didn't work in the Fl_Input widget due
	  to a bad mapping to control keys (STR #79)
	- Added the OSX-specific fl_open_callback() function to
	  handle Open Documents messages from the Finder (STR
	  #80)
	- The configure script contained erroneous whitespace in
	  various tests which caused errors on some platforms
	  (STR #60)
	- The fltk-config script still supported the deprecated
	  --prefix and --exec-prefix options; dropped them since
	  they serve no useful purpose and would never have
	  worked for the intended purpose anyways... (STR #56)
	- fl_filename_list returned 0 on Win32 if no directory
	  existed (STR #54)
	- Pressing 'home' after the last letter in a Text_Editor
	  would move the cursor to pos 0 (STR #39)
	- Fl::get_key(x) would mix up Ctrl and Meta on OS X (STR
	  #55)
	- The configure script used the wrong dynamic library